--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,10 @@
 # Convert all files to Unix file endings
-*.cs	text eol=fl
-*.meta	text eol=fl
+*.gitignore			text eol=fl
+*.gitattributes		text eol=fl
+*.cs				text eol=fl
+*.meta				text eol=fl
+*.prefab			text eol=fl
+*.unity				text eol=fl
 
 # Keep asset files as binary
-*.asset binary
+*.asset 			binary
