Updated git files

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,12 @@
-# Convert all files to Unix file endings
+# Convert all text files to Unix file endings
+README				text eol=fl
 *.gitignore			text eol=fl
 *.gitattributes		text eol=fl
 *.cs				text eol=fl
+*.js				text eol=fl
 *.meta				text eol=fl
+
+# Text serialized files
 *.prefab			text eol=fl
 *.unity				text eol=fl
 
