--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@ README				text eol=fl
 *.gitattributes		text eol=fl
 *.cs				text eol=fl
 *.js				text eol=fl
+*.txt				text eol=fl
 *.meta				text eol=fl
 
 # Text serialized files
@@ -11,5 +12,8 @@ README				text eol=fl
 *.unity				text eol=fl
 
 # Keep asset and dll files as binary
+*.fbx				binary
+*.png				binary
+*.tga				binary
 *.asset 			binary
 *.dll				binary
