--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Assets/ISFramework"]
 	path = Assets/ISFramework
-	url = https://mattivc@github.com/Mattivc/ISFramework.git
+	url = https://github.com/infinitysquared/ISFramework.git
